--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "aiedu-sandbox",
   "version": "1.0.0",
   "main": "src/main.js",
+  "keywords": ["sandbox"],
   "repository": "git@github.com:aiedu/sandbox.git",
-  "author": "mujie.zzl <mujie.zzl@alibaba-inc.com>",
+  "author": "rjgb <royjang11081@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "@types/node": "^8.0.53",
-    "assert": "^1.4.1"
+    "assert": "1.4.1"
   }
 }
